Cleaned up some of the project structure and added the README.md